# SecureML-A-System-for-Scalable-Privacy-Preserving-Machine-Learning

./: .gitignore  CMakeLists.txt
src/: defines.hpp  linear_regression.cpp  linear_regression.hpp  online_phase.cpp  online_phase.hpp  read_MNIST.hpp  secure_ML.cpp  setup_phase.cpp  setup_phase.hpp  util.cpp  util.hpp
